# pinky

./: #pinky.org#  .#pinky.org  Cargo.toml  README.md  duplicates.txt  pinky.md  pinky.org  scratch.yaml  uhh
cli/: Cargo.toml
cli/src/: main.rs
pinky/: Cargo.toml
pinky/src/: lib.rs  library.rs  page.rs  pinky.rs  schema.rs
pinky_nvim/: Cargo.toml
pinky_nvim/src/: lib.rs
src/: graph.rs  main.rs
src/shaders/: scratch.wgsl
test_files/: test.md
